--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
-
+    .icon-background{
+        background: #ededed;
+        padding: 2rem 2rem;
+        border-radius: 50%;
+        text-align: center;
+        display: inline-block;
+    }
+    .card-header-md, .card-header-ios{
+        font-weight: bold;
+    }
 }
