--- a/src/pages/site-details/site-details.scss
+++ b/src/pages/site-details/site-details.scss
@@ -1,3 +1,5 @@
 page-site-details {
-
+    .card-content-md .list-md .item-md,.card-content-ios .list-ios .item-ios{
+        padding-left:0;
+    }
 }
