--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,729 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+@font-face {
+    font-family: 'newgenray';
+    src:  url('../assets/fonts/newgenray.eot?j1at8o');
+    src:  url('../assets/fonts/newgenray.eot?j1at8o#iefix') format('embedded-opentype'),
+      url('../assets/fonts/newgenray.ttf?j1at8o') format('truetype'),
+      url('../assets/fonts/newgenray.woff?j1at8o') format('woff'),
+      url('../assets/fonts/newgenray.svg?j1at8o#newgenray') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  [class^="new-"], [class*=" new-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'newgenray' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .new-exchange .path1:before {
+    content: "\e903";
+    color: rgb(105, 75, 75);
+  }
+  .new-exchange .path2:before {
+    content: "\e904";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-exchange .path3:before {
+    content: "\e905";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-exchange .path4:before {
+    content: "\e906";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-exchange .path5:before {
+    content: "\e907";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path6:before {
+    content: "\e908";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path7:before {
+    content: "\e909";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path8:before {
+    content: "\e90a";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path9:before {
+    content: "\e90b";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path10:before {
+    content: "\e90c";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path11:before {
+    content: "\e90d";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path12:before {
+    content: "\e90e";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-exchange .path13:before {
+    content: "\e90f";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-exchange .path14:before {
+    content: "\e910";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-exchange .path15:before {
+    content: "\e911";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-exchange .path16:before {
+    content: "\e912";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path17:before {
+    content: "\e913";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path18:before {
+    content: "\e914";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path19:before {
+    content: "\e915";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path20:before {
+    content: "\e916";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-exchange .path21:before {
+    content: "\e917";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-exchange .path22:before {
+    content: "\e918";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-exchange .path23:before {
+    content: "\e919";
+    margin-left: -1em;
+    color: rgb(105, 75, 75);
+  }
+  .new-exchange .path24:before {
+    content: "\e91a";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-exchange .path25:before {
+    content: "\e91b";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-exchange .path26:before {
+    content: "\e91c";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-exchange .path27:before {
+    content: "\e91d";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path28:before {
+    content: "\e91e";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path29:before {
+    content: "\e91f";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path30:before {
+    content: "\e920";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-exchange .path31:before {
+    content: "\e921";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path32:before {
+    content: "\e922";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path33:before {
+    content: "\e923";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-exchange .path34:before {
+    content: "\e924";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-exchange .path35:before {
+    content: "\e925";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-exchange .path36:before {
+    content: "\e926";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-exchange .path37:before {
+    content: "\e927";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-exchange .path38:before {
+    content: "\e928";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path39:before {
+    content: "\e929";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path40:before {
+    content: "\e92a";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path41:before {
+    content: "\e92b";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-exchange .path42:before {
+    content: "\e92c";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path1:before {
+    content: "\e92d";
+    color: rgb(50, 74, 94);
+  }
+  .new-presentation .path2:before {
+    content: "\e92e";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-presentation .path3:before {
+    content: "\e92f";
+    margin-left: -1em;
+    color: rgb(101, 152, 203);
+  }
+  .new-presentation .path4:before {
+    content: "\e930";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-presentation .path5:before {
+    content: "\e931";
+    margin-left: -1em;
+    color: rgb(247, 151, 29);
+  }
+  .new-presentation .path6:before {
+    content: "\e932";
+    margin-left: -1em;
+    color: rgb(252, 214, 56);
+  }
+  .new-presentation .path7:before {
+    content: "\e933";
+    margin-left: -1em;
+    color: rgb(243, 226, 194);
+  }
+  .new-presentation .path8:before {
+    content: "\e934";
+    margin-left: -1em;
+    color: rgb(251, 215, 177);
+  }
+  .new-presentation .path9:before {
+    content: "\e935";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-presentation .path10:before {
+    content: "\e936";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-presentation .path11:before {
+    content: "\e937";
+    margin-left: -1em;
+    color: rgb(200, 208, 226);
+  }
+  .new-presentation .path12:before {
+    content: "\e938";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path13:before {
+    content: "\e939";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path14:before {
+    content: "\e93a";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path15:before {
+    content: "\e93b";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path16:before {
+    content: "\e93c";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path17:before {
+    content: "\e93d";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path18:before {
+    content: "\e93e";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path19:before {
+    content: "\e93f";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path20:before {
+    content: "\e940";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-presentation .path21:before {
+    content: "\e941";
+    margin-left: -1em;
+    color: rgb(172, 183, 201);
+  }
+  .new-presentation .path22:before {
+    content: "\e942";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-team .path1:before {
+    content: "\e943";
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path2:before {
+    content: "\e944";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path3:before {
+    content: "\e945";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path4:before {
+    content: "\e946";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path5:before {
+    content: "\e947";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path6:before {
+    content: "\e948";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path7:before {
+    content: "\e949";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path8:before {
+    content: "\e94a";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path9:before {
+    content: "\e94b";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path10:before {
+    content: "\e94c";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path11:before {
+    content: "\e94d";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path12:before {
+    content: "\e94e";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path13:before {
+    content: "\e94f";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path14:before {
+    content: "\e950";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path15:before {
+    content: "\e951";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path16:before {
+    content: "\e952";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-team .path17:before {
+    content: "\e953";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path18:before {
+    content: "\e954";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path19:before {
+    content: "\e955";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path20:before {
+    content: "\e956";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-team .path21:before {
+    content: "\e957";
+    margin-left: -1em;
+    color: rgb(105, 75, 75);
+  }
+  .new-team .path22:before {
+    content: "\e958";
+    margin-left: -1em;
+    color: rgb(105, 75, 75);
+  }
+  .new-team .path23:before {
+    content: "\e959";
+    margin-left: -1em;
+    color: rgb(105, 75, 75);
+  }
+  .new-team .path24:before {
+    content: "\e95a";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-team .path25:before {
+    content: "\e95b";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-team .path26:before {
+    content: "\e95c";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-team .path27:before {
+    content: "\e95d";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path28:before {
+    content: "\e95e";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path29:before {
+    content: "\e95f";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path30:before {
+    content: "\e960";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path31:before {
+    content: "\e961";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path32:before {
+    content: "\e962";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-team .path33:before {
+    content: "\e963";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-team .path34:before {
+    content: "\e964";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path35:before {
+    content: "\e965";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path36:before {
+    content: "\e966";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path37:before {
+    content: "\e967";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path38:before {
+    content: "\e968";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path39:before {
+    content: "\e969";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path40:before {
+    content: "\e96a";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path41:before {
+    content: "\e96b";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path42:before {
+    content: "\e96c";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path43:before {
+    content: "\e96d";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path44:before {
+    content: "\e96e";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path45:before {
+    content: "\e96f";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-team .path46:before {
+    content: "\e970";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path47:before {
+    content: "\e971";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path48:before {
+    content: "\e972";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path49:before {
+    content: "\e973";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path50:before {
+    content: "\e974";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path51:before {
+    content: "\e975";
+    margin-left: -1em;
+    color: rgb(191, 198, 213);
+  }
+  .new-team .path52:before {
+    content: "\e976";
+    margin-left: -1em;
+    color: rgb(238, 240, 248);
+  }
+  .new-man .path1:before {
+    content: "\e977";
+    color: rgb(105, 75, 75);
+  }
+  .new-man .path2:before {
+    content: "\e978";
+    margin-left: -1em;
+    color: rgb(86, 59, 59);
+  }
+  .new-man .path3:before {
+    content: "\e979";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-man .path4:before {
+    content: "\e97a";
+    margin-left: -1em;
+    color: rgb(50, 74, 94);
+  }
+  .new-man .path5:before {
+    content: "\e97b";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-man .path6:before {
+    content: "\e97c";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-man .path7:before {
+    content: "\e97d";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-man .path8:before {
+    content: "\e97e";
+    margin-left: -1em;
+    color: rgb(251, 203, 153);
+  }
+  .new-man .path9:before {
+    content: "\e97f";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-man .path10:before {
+    content: "\e980";
+    margin-left: -1em;
+    color: rgb(237, 186, 137);
+  }
+  .new-man .path11:before {
+    content: "\e981";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-man .path12:before {
+    content: "\e982";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-man .path13:before {
+    content: "\e983";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-man .path14:before {
+    content: "\e984";
+    margin-left: -1em;
+    color: rgb(239, 242, 249);
+  }
+  .new-man .path15:before {
+    content: "\e985";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-man .path16:before {
+    content: "\e986";
+    margin-left: -1em;
+    color: rgb(239, 76, 53);
+  }
+  .new-man .path17:before {
+    content: "\e987";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-man .path18:before {
+    content: "\e988";
+    margin-left: -1em;
+    color: rgb(40, 61, 76);
+  }
+  .new-man .path19:before {
+    content: "\e989";
+    margin-left: -1em;
+    color: rgb(223, 49, 38);
+  }
+  .new-man .path20:before {
+    content: "\e98a";
+    margin-left: -1em;
+    color: rgb(223, 49, 38);
+  }
+  .new-man .path21:before {
+    content: "\e98b";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-man .path22:before {
+    content: "\e98c";
+    margin-left: -1em;
+    color: rgb(32, 33, 33);
+  }
+  .new-client:before {
+    content: "\e900";
+  }
+  .new-stats:before {
+    content: "\e901";
+  }
+  .new-site:before {
+    content: "\e902";
+  }
+    
+
 .content-md, .content-ios{background-color:#f2f2f2;}
 .center{
     text-align: center;
@@ -24,6 +747,7 @@
 
 button.item-md, button.item-ios{
     margin-bottom: 10px;
+    box-shadow: 0px 2px 3px #888888;
 }
 button h2{
     text-transform: capitalize;
@@ -43,3 +767,7 @@ ion-card:last-child{
         color: #FF6153;
     }
 } 
+.searchbar-md,.searchbar-ios {
+  padding: 0;
+  margin-bottom: 1rem;
+}
