--- a/src/pages/client-create/client-create.scss
+++ b/src/pages/client-create/client-create.scss
@@ -1,3 +1,5 @@
 page-client-create {
-
+    .card-content-md .list-md .item-md,.card-content-ios .list-ios .item-ios{
+        padding-left:0;
+    }
 }
