--- a/src/pages/quote-create/quote-create.scss
+++ b/src/pages/quote-create/quote-create.scss
@@ -14,5 +14,22 @@ page-quote-create {
         .heading .label-md{font-size: 1.8rem;}
         .label-md{margin: 0;}
     }
-    
+    .verify{
+        padding: 5px;
+    }
+    .remove-item-padding{
+        .item-md,.item-md-header{
+            padding-left: 0;
+        }
+        .item-ios,.item-ios-header{
+            padding-left: 0;
+        }
+    }
+    .quote-cards{
+        margin: 0;
+        width: 100%;
+        .card-content-md .list-md .item-md,.card-content-ios .list-ios .item-ios{
+            padding-left:0;
+        }
+    }
 }
