--- a/src/pages/site-details/site-details.scss
+++ b/src/pages/site-details/site-details.scss
@@ -2,7 +2,7 @@ page-site-details {
     .card-content-md .list-md .item-md,.card-content-ios .list-ios .item-ios{
         padding-left:0;
     }
-    .card-md .item-md.item-block:last-child .item-inner,.card-ios .item-ios.item-block:last-child .item-inner{
+    .card-md .item-md.item-block.no-lines .item-inner,.card-ios .item-ios.item-block.no-lines .item-inner{
         border-bottom:0 !important; 
     }
 }
