--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -752,7 +752,7 @@ button.item-md, button.item-ios{
 button h2{
     text-transform: capitalize;
 }
-.card-md .item-md.item-block .item-inner{
+.card-md .item-md.item-block .item-inner,.card-ios .item-ios.item-block .item-inner{
     border-bottom: 1px solid #dedede; 
 }
 ion-card:last-child{
@@ -771,3 +771,27 @@ ion-card:last-child{
   padding: 0;
   margin-bottom: 1rem;
 }
+.searchbar-ios{
+  border-bottom: 0;
+  background: transparent; 
+}
+
+ion-card > ion-list > ion-item:last-child{
+  margin-bottom: 1.6rem;
+}
+.list-ios > .item-block:last-child, .list-md > .item-block:last-child{
+  border-bottom: 0px;
+}
+.list-md .item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus):last-child, .list-md .item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus):last-child
+{
+  box-shadow: none;
+}
+.list-md .item-input.item-input-has-focus:last-child, .list-md .item-input.input-has-focus:last-child{
+  box-shadow: none;
+}
+.item-md .item-input.item-input-has-focus:last-child .item-inner, .item-md .item-input.input-has-focus:last-child .item-inner{
+  border-bottom-color: map-get($colors, primary);
+  -webkit-box-shadow: inset 0 -1px 0 0 map-get($colors, primary);
+  box-shadow: inset 0 -1px 0 0 map-get($colors, primary);
+}
+  
