--- a/src/pages/quote-create/quote-create.scss
+++ b/src/pages/quote-create/quote-create.scss
@@ -1,18 +1,18 @@
 page-quote-create {
-    .segment-md .segment-button{
+    .segment-md .segment-button,.segment-ios .segment-button{
         line-height: 1.5rem;
     }
     .suppliers,.verify{
         padding: 0;
         .item-inner{padding: 0 !important}
-        .list-header-md{
+        .list-header-md,.list-header-ios{
             margin-top: 0;
             margin-bottom: 0;
             background: #dedede;
             color: black;
         }
-        .heading .label-md{font-size: 1.8rem;}
-        .label-md{margin: 0;}
+        .heading .label-md,.heading .label-ios{font-size: 1.8rem;}
+        .label-md,.label-ios{margin: 0;}
     }
     .verify{
         padding: 5px;
