--- a/src/pages/quotes/quotes.scss
+++ b/src/pages/quotes/quotes.scss
@@ -2,13 +2,14 @@ page-quotes {
     .quotes{
         padding: 0;
         .item-inner{padding: 0 !important}
-        .list-header-md{
+        .list-header-md,.list-header-ios{
             margin-top: 0;
             margin-bottom: 0;
             background: #dedede;
             color: black;
         }
         .heading .label-md{font-size: 1.8rem;}
-        .label-md{margin: 0;}
+        .heading .label-ios{font-size: 1.6rem;}
+        .label-md,.label-ios{margin: 0;}
     }
 }
