some error resolved

--- a/src/pages/client-create/client-create.scss
+++ b/src/pages/client-create/client-create.scss
@@ -2,4 +2,7 @@ page-client-create {
     .card-content-md .list-md .item-md,.card-content-ios .list-ios .item-ios{
         padding-left:0;
     }
+    ion-card-header{
+        font-weight: bold;
+    }
 }
