--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,10 @@
 page-home {
     .icon-background{
         background: #ededed;
-        padding: 2rem 2rem;
+        padding: 1rem 1.5rem;
         border-radius: 50%;
         text-align: center;
-        display: block;
+        display: inline-block;
     }
     .card-header-md, .card-header-ios{
         font-weight: bold;
